--- a/main.css
+++ b/main.css
@@ -10,35 +10,15 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-#red{
-  border-top-color: #f00;
-
-}
-
-#orange{
-  border-top-color: #ffa500;
-
-}
-
-#yellow{
-  border-top-color: #ff0;
-
-}
-
-#green{
-  border-top-color: #00bc3f;
-
-}
-
-#blue{
-  border-top-color: #06f;
-
-}
-
-#indigo{
+#red #orange #yelllow #green #blue #indigo #violet{
+  border-top-color: #f00
+  border-top-color: #ffa500
+  border-top-color: #00bc3f
+  border-top-color: #06f
   border-top-color: #8a2be2
+  border-top-color: #d300c9
+
 
 }
 
-#Violet{
-  border-top-color: #d300c9;
+
