--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-#red #orange #yelllow #green #blue #indigo #violet{
+.colors{
   border-top-color: #f00
   border-top-color: #ffa500
   border-top-color: #00bc3f
